GlyphScriptCompiler.IntegrationTests/TestData/SyntaxErrorExamples/invalidTypeConversion.gs
🔢 x = 5.5
🔷 y = "hello"
